[package]
name = "uni-gl"
version = "0.3.0"
authors = [
    "Edwin Cheng <edwin0cheng@gmail.com>",
    "jice <jice.nospam@gmail.com>"
]
description = "Unrust native/wasm openGL/webGL compatibility layer"
license = "MIT"
documentation = "https://docs.rs/uni-gl"
repository = "https://github.com/unrust/uni-gl"
keywords = ["opengl", "wasm", "webgl"]
edition = "2021"
exclude = ["www/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.14.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlShader",
    "WebGlProgram",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebGlFramebuffer",
] }

[dev-dependencies]
uni-app = "0.3.*"
